syntax = "proto3";

package proto;

option go_package = "shared/proto;proto";

import "shared/proto/product.proto";

service CartService {
  rpc GetCart(EmptyCartRequest) returns (FullCartResponse) {}
  rpc AddToCart(CartRequest) returns (EmptyCartResponse) {}
  rpc UpdateCart(CartRequest) returns (FullCartResponse) {}
  rpc RemoveFromCart(CartRequest) returns (FullCartResponse) {}
}

message EmptyCartRequest {}

message CartRequest {
  int64 product_id = 1;
  int32 quantity = 2;
}

message FullCartResponse {
  int64 user_id = 1;
  repeated proto.Product product = 2;
  double total_price = 3;
}

message EmptyCartResponse {}